RESOLVED FIXED148130
[Win] Popup menu displayed at incorrect position when page is scrolled and device scale factor != 1.
https://bugs.webkit.org/show_bug.cgi?id=148130
Summary [Win] Popup menu displayed at incorrect position when page is scrolled and de...
peavo
Reported 2015-08-18 10:07:08 PDT
When a popup menu is displayed on a scrolled page, its position is incorrect when the device scale factor != 1.
Attachments
Patch (1.65 KB, patch)
2015-08-18 10:16 PDT, peavo
no flags
peavo
Comment 1 2015-08-18 10:16:23 PDT
WebKit Commit Bot
Comment 2 2015-08-18 12:03:25 PDT
Comment on attachment 259276 [details] Patch Clearing flags on attachment: 259276 Committed r188588: <http://trac.webkit.org/changeset/188588>
WebKit Commit Bot
Comment 3 2015-08-18 12:03:30 PDT
All reviewed patches have been landed. Closing bug.
peavo
Comment 4 2015-08-18 12:20:11 PDT
Thanks for reviewing :)
Note You need to log in before you can comment on or make changes to this bug.