[Win] Popup menu displayed at incorrect position when page is scrolled and device scale factor != 1. https://bugs.webkit.org/show_bug.cgi?id=148130

Reviewed by Alex Christensen.

Scale WebView coordinates with device scale factor.

* platform/win/PopupMenuWin.cpp:
(WebCore::PopupMenuWin::calculatePositionAndSize):


Canonical link: https://commits.webkit.org/166246@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188588 268f45cc-cd09-0410-ab3c-d52691b4dbfc